Add content to the contributors section

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <tr>
                         <td>Languages</td>
                         <td>English</td>
-                        <td>English, Dutch, French, Russian, <a href="/TheJaredWilcurt/scout-app/blob/Scout-App-2-Dev/documentation/translate-scout.md">contribute more</a></td>
+                        <td>English, Dutch, French, Russian, <a href="https://github.com/TheJaredWilcurt/scout-app/blob/Scout-App-2-Dev/documentation/translate-scout.md">contribute more</a></td>
                     </tr>
                 </tbody>
             </table>
@@ -213,25 +213,34 @@
             <div class="half">
                 <h4>Scout-App 2 Development</h4>
                 <ul>
-                    <li></li>
+                    <li><a href="http://github.com/TheJaredWilcurt">TheJaredWilcurt</a> - Creator, Maintainer, Project Manager</li>
+                    <li><a href="http://github.com/StephanRaab">Stephan Raab</a> - Themes feature - Bug Finder</li>
+                    <li><a href="https://github.com/BlackBetty">Daniel Golant</a> - UX Testing and Design</li>
+                    <li><a href="https://github.com/kimmortal1">Kim Sharpe</a> - New Logo Design</li>
+                    <li><a href="http://github.com/zdennis">zdennis</a> - UX Design and Planning</li>
+                    <li><a href="http://github.com/mejiaj">mejiaj</a> - UX Design and Planning</li>
                 </ul>
             </div>
             <div class="half">
                 <h4>Scout-App 2 Website</h4>
                 <ul>
-                    <li></li>
+                    <li><a href="http://github.com/TheJaredWilcurt">The Jared Wilcurt</a> - Project Management, Site Content, General styles, Image optimization</li>
+                    <li><a href="https://github.com/kimmortal1">Kim Sharpe</a> - Logo/Branding</li>
+                    <li><a href="https://github.com/getmicah">Michah Cowell</a> - Gulp setup, Automated Sass processing, JS Minification/Uglification, Hot reloading, LoFi Mockups/Wireframes</li>
                 </ul>
             </div>
             <div class="half">
                 <h4>Scout-App 2 Translators</h4>
                 <ul>
-                    <li></li>
+                    <li><a href="http://github.com/StephanRaab">Stephan Raab</a> - French &amp; Dutch</li>
+                    <li><a href="https://github.com/BlackBetty">Daniel Golant</a> - Russian</li>
                 </ul>
             </div>
             <div class="half">
                 <h4>Scout-App 1</h4>
                 <ul>
-                    <li></li>
+                    <li><a href="http://github.com/mhs">Mutually Human</a> - The company behind the original</li>
+                    <li><a href="http://github.com/zdennis">zdennis</a> - Lead Developer</li>
                 </ul>
             </div>
         </section>
