Styled contributors section

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     <header>
         <img src="_img/scout-app-logo.svg" alt="Scout-App 2 Logo" />
     </header>
+
     <main>
 
         <section id="downloads-and-video" class="bgbrownsugarketchup">
@@ -208,7 +209,7 @@
         <section id="contributors" class="bgmustard">
             <div class="full">
                 <h3 class="textketchup">Contributors</h3>
-                <p>As an open source project, Scout-App could not exist without the support and contributions of </p>
+                <p>As an open source project, Scout-App could not exist without the support and contributions of our users and the open source community.</p>
             </div>
             <div class="half">
                 <h4>Scout-App 2 Development</h4>
@@ -261,6 +262,7 @@
         </section>
 
     </main>
+
     <footer>
         <div>
             <h4>Additional Links</h4>
