--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
                 <div id="downloads">
                     <h3>Downloads</h3>
                     <div class="half">
-                        <a href="https://github.com/TheJaredWilcurt/scout-app/releases" target="_blank">Linux 32-Bit</a>
-                        <a href="https://github.com/TheJaredWilcurt/scout-app/releases" target="_blank">Linux 64-Bit</a>
+                        <a href="https://github.com/TheJaredWilcurt/scout-app/releases" target="_blank">Windows</a>
+                        <a href="https://github.com/TheJaredWilcurt/scout-app/releases" target="_blank">OSX</a>
                     </div>
                     <div class="half">
-                        <a href="https://github.com/TheJaredWilcurt/scout-app/releases" target="_blank">OSX</a>
-                        <a href="https://github.com/TheJaredWilcurt/scout-app/releases" target="_blank">Windows</a>
+                        <a href="https://github.com/TheJaredWilcurt/scout-app/releases" target="_blank">Linux 32-Bit</a>
+                        <a href="https://github.com/TheJaredWilcurt/scout-app/releases" target="_blank">Linux 64-Bit</a>
                     </div>
                 </div>
             </div>
@@ -190,7 +190,7 @@
             </div>
         </section>
 
-        <section id="quotes">
+        <section id="quotes" class="bgpuppybase">
             <h3>Scout-App is recommended by:</h3>
             <ul>
               <li>The official Sass Language website</li>
@@ -204,6 +204,44 @@
               <li><cite>OS Training</cite> &mdash; <q>If you are looking for free software to compile your Sass, this is a great option.</q></li>
               <li><cite>Johnstonian Era</cite> &mdash; <q>It’s crazy simple to use.</q></li>
             </ul>
+        </section>
+
+        <section id="cultures" class="bgwhite">
+            <div class="half">
+                <h1>Multi-Language Support</h1>
+                <p>Scout-App runs on many different operation systems. Click a logo above to see screenshots from some of the supported OS's.</p>
+                <img src="_img/logo-win.svg"    alt="Windows" title="Windows" data-os="win"    class="win"    />
+                <img src="_img/logo-ubuntu.svg" alt="Ubuntu"  title="Ubuntu"  data-os="ubuntu" class="ubuntu" />
+                <img src="_img/logo-zorin.svg"  alt="Zorin"   title="Zorin"   data-os="zorin"  class="zorin"  />
+                <img src="_img/logo-osx.svg"    alt="OSX"     title="OSX"     data-os="osx"    class="osx"    />
+            </div>
+            <div class="half slick">
+                <!--
+                    <div><img data-lazy="_img/screenshots/zorin/01.png" /><p>First Time User Experience</p></div>
+                    <div><img data-lazy="_img/screenshots/zorin/02.png" /><p>English</p></div>
+                    <div><img data-lazy="_img/screenshots/zorin/03.png" /><p>Dutch</p></div>
+                    <div><img data-lazy="_img/screenshots/zorin/04.png" /><p>French</p></div>
+                    <div><img data-lazy="_img/screenshots/zorin/05.png" /><p>Russian</p></div>
+                    <div><img data-lazy="_img/screenshots/zorin/06.png" /><p>Theme: Cerulean</p></div>
+                    <div><img data-lazy="_img/screenshots/zorin/07.png" /><p>Theme: Classic</p></div>
+                    <div><img data-lazy="_img/screenshots/zorin/08.png" /><p>Theme: Cosmo</p></div>
+                    <div><img data-lazy="_img/screenshots/zorin/09.png" /><p>Theme: Cyborg</p></div>
+                    <div><img data-lazy="_img/screenshots/zorin/10.png" /><p>Theme: Darkly</p></div>
+                    <div><img data-lazy="_img/screenshots/zorin/11.png" /><p>Theme: Flatly</p></div>
+                    <div><img data-lazy="_img/screenshots/zorin/12.png" /><p>Theme: Journal</p></div>
+                    <div><img data-lazy="_img/screenshots/zorin/13.png" /><p>Theme: Lumen</p></div>
+                    <div><img data-lazy="_img/screenshots/zorin/14.png" /><p>Theme: Paper</p></div>
+                    <div><img data-lazy="_img/screenshots/zorin/15.png" /><p>Theme: Readable</p></div>
+                    <div><img data-lazy="_img/screenshots/zorin/16.png" /><p>Theme: Sandstone</p></div>
+                    <div><img data-lazy="_img/screenshots/zorin/17.png" /><p>Theme: Slate</p></div>
+                    <div><img data-lazy="_img/screenshots/zorin/18.png" /><p>Theme: Spacelab</p></div>
+                    <div><img data-lazy="_img/screenshots/zorin/19.png" /><p>Theme: Superhero</p></div>
+                    <div><img data-lazy="_img/screenshots/zorin/20.png" /><p>Theme: United</p></div>
+                    <div><img data-lazy="_img/screenshots/zorin/21.png" /><p>Theme: Yeti</p></div>
+                    <div><img data-lazy="_img/screenshots/zorin/22.png" /><p>Status of All Projects</p></div>
+                    <div><img data-lazy="_img/screenshots/zorin/23.png" /><p>Dev Tools are always accessible</p></div>
+                -->
+            </div>
         </section>
 
         <section id="contributors" class="bgmustard">
