added min reqs data, updated styles and contributors

--- a/index.html
+++ b/index.html
@@ -264,6 +264,7 @@
                 <h4>Scout-App 2 Website</h4>
                 <ul>
                     <li><a href="http://github.com/TheJaredWilcurt">The Jared Wilcurt</a> - Project Management, Site Content, General styles, Image optimization</li>
+                    <li><a href="https://github.com/LRod-101">Luis Rodriguez</a> - Dynamic GitHub API integration
                     <li><a href="https://github.com/kimmortal1">Kim Sharpe</a> - Logo/Branding</li>
                     <li><a href="https://github.com/getmicah">Michah Cowell</a> - Gulp setup, Automated Sass processing, JS Minification/Uglification, Hot reloading, LoFi Mockups/Wireframes</li>
                 </ul>
@@ -282,6 +283,25 @@
                     <li><a href="http://github.com/zdennis">zdennis</a> - Lead Developer</li>
                 </ul>
             </div>
+        </section>
+
+        <section>
+            <h4>Minimum System Requirements</h4>
+            <ul>
+                <li>Windows: At least 64MB of available RAM</li>
+                <li>Windows: At least 100MB of free space</li>
+                <li>Windows: XP, Vista, 7, 8, 10</li>
+                <li>Windows: 32-Bit or 64-Bit OS (ARM not supported)</li>
+                <li>OSX: At least ???MB of available RAM</li>
+                <li>OSX: At least 180MB of free space</li>
+                <li>OSX: 10.6, 10.7, 10.8, 10.9, 10.10, 10.11</li>
+                <li>OSX: 64-Bit OS (32-Bit and ARM not supported)</li>
+                <li>Linux: At least ???MB of available RAM</li>
+                <li>Linux: At least 170MB of free space</li>
+                <li>Linux: Ubuntu 12, Ubuntu 14, Ubuntu 16, Debian 8, Zorin 9</li>
+                <li>Linux: Other Debian based OS's will likely work, some other Linux OS's may work, though are not officially supported</li>
+                <li>Linux: 32-Bit or 64-Bit OS (ARM not supported)</li>
+            </ul>
         </section>
 
         <section id="technology" class="bgbrownsugarketchup">
