Add logos to tech section, Update styles

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
             </div>
         </section>
 
-        <section>
+        <section id="minreqs" class="bgpuppyspot">
             <h4>Minimum System Requirements</h4>
             <ul>
                 <li>Windows: At least 64MB of available RAM</li>
@@ -304,24 +304,27 @@
             </ul>
         </section>
 
-        <section id="technology" class="bgbrownsugarketchup">
+        <section id="technology" class="bgwhite">
             <div class="full">
-                <h2 class="textpuppybase">Scout-App was made with:</h2>
+                <h2 class="textpuppyspot">Scout-App was made with:</h2>
             </div>
             <div class="thirds textpuppyspot">
-                The Node-Sass engine.
+                <a href="https://github.com/sass/node-sass" target="_blank"><img src="_img/logo-nodesass.svg" alt="The Node-Sass engine." title="The Node-Sass engine." /></a>
+                <p>The Node-Sass engine.</p>
             </div>
             <div class="thirds textpuppyspot">
-                The Universal GUI Library/Framework
+                <a href="http://ugui.io" target="_blank"><img src="_img/logo-ugui.png" alt="The Universal GUI Library/Framework" title="The Universal GUI Library/Framework" /></a>
+                <p>The Universal GUI Library/Framework</p>
             </div>
             <div class="thirds textpuppyspot">
-                The NW.js Cross-Platform Runtime Environment
+                <a href="http://nwjs.io" target="_blank"><img src="_img/logo-nwjs.png" alt="The NW.js Cross-Platform Runtime Environment" title="The NW.js Cross-Platform Runtime Environment" /></a>
+                <p>The NW.js Cross-Platform Runtime Environment</p>
             </div>
         </section>
 
     </main>
 
-    <footer>
+    <footer class="bgpuppybase">
         <div>
             <h4>Additional Links</h4>
             <a href="https://github.com/TheJaredWilcurt/scout-app/releases">Alternate Downloads</a>
