Updated min reqs

--- a/index.html
+++ b/index.html
@@ -287,21 +287,41 @@
 
         <section id="minreqs" class="bgpuppyspot">
             <h4>Minimum System Requirements</h4>
-            <ul>
-                <li>Windows: At least 64MB of available RAM</li>
-                <li>Windows: At least 100MB of free space</li>
-                <li>Windows: XP, Vista, 7, 8, 10</li>
-                <li>Windows: 32-Bit or 64-Bit OS (ARM not supported)</li>
-                <li>OSX: At least ???MB of available RAM</li>
-                <li>OSX: At least 180MB of free space</li>
-                <li>OSX: 10.6, 10.7, 10.8, 10.9, 10.10, 10.11</li>
-                <li>OSX: 64-Bit OS (32-Bit and ARM not supported)</li>
-                <li>Linux: At least ???MB of available RAM</li>
-                <li>Linux: At least 170MB of free space</li>
-                <li>Linux: Ubuntu 12, Ubuntu 14, Ubuntu 16, Debian 8, Zorin 9</li>
-                <li>Linux: Other Debian based OS's will likely work, some other Linux OS's may work, though are not officially supported</li>
-                <li>Linux: 32-Bit or 64-Bit OS (ARM not supported)</li>
-            </ul>
+
+            <table>
+                <tr>
+                    <th data-os="win">Windows</th>
+                    <td rowspan="3">
+                        <div class="win">
+                            At least <strong>64MB</strong> of available RAM.
+                            At least <strong>100MB</strong> of free space.
+                            <strong>XP, Vista, 7, 8, 10.</strong>
+                            <strong>32-Bit</strong> or <strong>64-Bit</strong> OS (ARM not supported).
+                        </div>
+                        <div class="osx">
+                            At least <strong>???MB</strong> of available RAM.
+                            At least <strong>180MB</strong> of free space.
+                            <strong>10.6, 10.7, 10.8, 10.9, 10.10, 10.11.</strong>
+                            <strong>64-Bit</strong> OS only (32-Bit and ARM not supported).
+                        </div>
+                        <div class="linux">
+                            At least <strong>64MB</strong> of available RAM.
+                            At least <strong>170MB</strong> of free space.
+                            <strong>Ubuntu 12, Ubuntu 14, Ubuntu 16, Debian 8, Zorin 9, Zorin 11.</strong>
+                            <strong>32-Bit</strong> or <strong>64-Bit</strong> OS (ARM not supported).
+                            <small>Some other Linux OS's (particularly Debian based) may work, though are not officially supported.</small>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <th data-os="osx">OSX</th>
+                </tr>
+                <tr>
+                    <th data-os="linux">Linux</th>
+                </tr>
+            </table>
+
+
         </section>
 
         <section id="technology" class="bgwhite">
