--- a/index.html
+++ b/index.html
@@ -286,42 +286,43 @@
         </section>
 
         <section id="minreqs" class="bgpuppyspot">
-            <h4>Minimum System Requirements</h4>
-
-            <table>
-                <tr>
-                    <th data-os="win">Windows</th>
-                    <td rowspan="3">
-                        <div class="win">
-                            At least <strong>64MB</strong> of available RAM.
-                            At least <strong>100MB</strong> of free space.
-                            <strong>XP, Vista, 7, 8, 10.</strong>
-                            <strong>32-Bit</strong> or <strong>64-Bit</strong> OS (ARM not supported).
-                        </div>
-                        <div class="osx">
-                            At least <strong>???MB</strong> of available RAM.
-                            At least <strong>180MB</strong> of free space.
-                            <strong>10.6, 10.7, 10.8, 10.9, 10.10, 10.11.</strong>
-                            <strong>64-Bit</strong> OS only (32-Bit and ARM not supported).
-                        </div>
-                        <div class="linux">
-                            At least <strong>64MB</strong> of available RAM.
-                            At least <strong>170MB</strong> of free space.
-                            <strong>Ubuntu 12, Ubuntu 14, Ubuntu 16, Debian 8, Zorin 9, Zorin 11.</strong>
-                            <strong>32-Bit</strong> or <strong>64-Bit</strong> OS (ARM not supported).
-                            <small>Some other Linux OS's (particularly Debian based) may work, though are not officially supported.</small>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <th data-os="osx">OSX</th>
-                </tr>
-                <tr>
-                    <th data-os="linux">Linux</th>
-                </tr>
-            </table>
-
-
+            <div class="half">
+                <h4>Minimum System Requirements</h4>
+                <table>
+                    <tr>
+                        <th data-os="win">Windows</th>
+                        <td rowspan="3">
+                            <div class="win">
+                                At least <strong>64MB</strong> of available RAM.
+                                At least <strong>100MB</strong> of free space.
+                                <strong>XP, Vista, 7, 8, 10.</strong>
+                                <strong>32-Bit</strong> or <strong>64-Bit</strong> OS (ARM not supported).
+                            </div>
+                            <div class="osx">
+                                At least <strong>???MB</strong> of available RAM.
+                                At least <strong>180MB</strong> of free space.
+                                <strong>10.6, 10.7, 10.8, 10.9, 10.10, 10.11.</strong>
+                                <strong>64-Bit</strong> OS only (32-Bit and ARM not supported).
+                            </div>
+                            <div class="linux">
+                                At least <strong>64MB</strong> of available RAM.
+                                At least <strong>170MB</strong> of free space.
+                                <strong>Ubuntu 12, Ubuntu 14, Ubuntu 16, Debian 8, Zorin 9, Zorin 11.</strong>
+                                <strong>32-Bit</strong> or <strong>64-Bit</strong> OS (ARM not supported).
+                                <small>Some other Linux OS's (particularly Debian based) may work, though are not officially supported.</small>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th data-os="osx">OSX</th>
+                    </tr>
+                    <tr>
+                        <th data-os="linux">Linux</th>
+                    </tr>
+                </table>
+            </div>
+            <div class="half">
+            </div>
         </section>
 
         <section id="technology" class="bgwhite">
