--- a/index.html
+++ b/index.html
@@ -209,6 +209,18 @@
         <section id="cultures" class="bgwhite">
             <div class="half">
                 <h1>Multi-Language Support</h1>
+                <p>Scout-App 2 was designed with a powerful translation engine allowing for easily swapping out language files. It supports <span class="supported">English, Dutch, French, and Russian</span>. <a href="#cultures" class="showtranslations">Help translate Scout-App</a>.</p>
+                <div id="translation_instructions">
+                    <h4>Translating Scout-App 2 Instructions</h4>
+                    <ol>
+                        <li>Log into your <a href="https://accounts.google.com/login" target="_blank">Google Account</a>.</li>
+                        <li>Go to the translation file on <a href="https://docs.google.com/spreadsheets/d/16FtHGThz0-CBz_rf_9QO4zOV7oNmNk2BlwmtvKuzAhs/edit?usp=sharing">Google Sheets</a>.</li>
+                        <li>There is an <strong>en</strong> column for the English version, and a <strong>CONTEXT</strong> column that explains the usage of the text.</li>
+                        <li>Create a new column for your language. (Hide columns from languages you don't care about.)</li>
+                        <li>Translate all of the `en` phrases. Add another column for any notes related to your translations.</li>
+                        <li><a href="https://github.com/mhs/scout-app/issues/new?title=SA2%20-%20Translated%20Scout-App&body=New%20translation%20can%20be%20found%20at%0D%0D%2A%20https%3A%2F%2Fdocs%2Egoogle%2Ecom%2Fspreadsheets%2Fd%2F16FtHGThz0-CBz_rf_9QO4zOV7oNmNk2BlwmtvKuzAhs%2Fedit%3Fusp%3Dsharing">Add an issue to GitHub</a>, informing us of an update to the document.</li>
+                    </ol>
+                </div>
                 <p>Scout-App runs on many different operation systems. Click a logo above to see screenshots from some of the supported OS's.</p>
                 <img src="_img/logo-win.svg"    alt="Windows" title="Windows" data-os="win"    class="win"    />
                 <img src="_img/logo-ubuntu.svg" alt="Ubuntu"  title="Ubuntu"  data-os="ubuntu" class="ubuntu" />
@@ -252,7 +264,7 @@
             <div class="half">
                 <h4>Scout-App 2 Development</h4>
                 <ul>
-                    <li><a href="http://github.com/TheJaredWilcurt">TheJaredWilcurt</a> - Creator, Maintainer, Project Manager</li>
+                    <li><a href="http://github.com/TheJaredWilcurt">The Jared Wilcurt</a> - Creator, Maintainer, Project Manager</li>
                     <li><a href="http://github.com/StephanRaab">Stephan Raab</a> - Themes feature - Bug Finder</li>
                     <li><a href="https://github.com/BlackBetty">Daniel Golant</a> - UX Testing and Design</li>
                     <li><a href="https://github.com/kimmortal1">Kim Sharpe</a> - New Logo Design</li>
@@ -285,8 +297,8 @@
             </div>
         </section>
 
-        <section id="minreqs" class="bgpuppyspot">
-            <div class="half">
+        <section id="minreqs_and_mixins" class="bgpuppyspot">
+            <div id="minreqs" class="half">
                 <h4>Minimum System Requirements</h4>
                 <table>
                     <tr>
@@ -313,15 +325,12 @@
                             </div>
                         </td>
                     </tr>
-                    <tr>
-                        <th data-os="osx">OSX</th>
-                    </tr>
-                    <tr>
-                        <th data-os="linux">Linux</th>
-                    </tr>
+                    <tr><th data-os="osx">OSX</th></tr>
+                    <tr><th data-os="linux">Linux</th></tr>
                 </table>
             </div>
-            <div class="half">
+            <div id="mixins" class="half bgpuppybase">
+                <h4>Built-in Mixins</h4>
             </div>
         </section>
 
