--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         <section id="cultures" class="bgwhite">
             <div class="half">
                 <h1>Multi-Language Support</h1>
-                <p>Scout-App 2 was designed with a powerful translation engine allowing for easily swapping out language files. It supports <span class="supported">English, Dutch, French, and Russian</span>. <a href="#cultures" class="showtranslations">Help translate Scout-App</a>.</p>
+                <p>Scout-App 2 was designed with a powerful translation engine allowing for easily swapping out language files. It supports <strong class="supported">English, Dutch, French, and Russian</strong>. <a href="#cultures" class="showtranslations">Help translate Scout-App</a>.</p>
                 <div id="translation_instructions">
                     <h4>Translating Scout-App 2 Instructions</h4>
                     <ol>
