Added Themes section. Polished site and text.

--- a/index.html
+++ b/index.html
@@ -155,38 +155,14 @@
         <section id="screenshots" class="bgwhite">
             <div class="half">
                 <h1>Screenshots</h1>
-                <p>Scout-App runs on many different operation systems. Click a logo above to see screenshots from some of the supported OS's.</p>
+                <p>Scout-App runs on many different operation systems. Click a logo below to see screenshots from some of the supported OS's.</p>
                 <img src="_img/logo-win.svg"    alt="Windows" title="Windows" data-os="win"    class="win"    />
                 <img src="_img/logo-ubuntu.svg" alt="Ubuntu"  title="Ubuntu"  data-os="ubuntu" class="ubuntu" />
                 <img src="_img/logo-zorin.svg"  alt="Zorin"   title="Zorin"   data-os="zorin"  class="zorin"  />
                 <img src="_img/logo-osx.svg"    alt="OSX"     title="OSX"     data-os="osx"    class="osx"    />
             </div>
             <div class="half slick">
-                <!--
-                    <div><img data-lazy="_img/screenshots/zorin/01.png" /><p>First Time User Experience</p></div>
-                    <div><img data-lazy="_img/screenshots/zorin/02.png" /><p>English</p></div>
-                    <div><img data-lazy="_img/screenshots/zorin/03.png" /><p>Dutch</p></div>
-                    <div><img data-lazy="_img/screenshots/zorin/04.png" /><p>French</p></div>
-                    <div><img data-lazy="_img/screenshots/zorin/05.png" /><p>Russian</p></div>
-                    <div><img data-lazy="_img/screenshots/zorin/06.png" /><p>Theme: Cerulean</p></div>
-                    <div><img data-lazy="_img/screenshots/zorin/07.png" /><p>Theme: Classic</p></div>
-                    <div><img data-lazy="_img/screenshots/zorin/08.png" /><p>Theme: Cosmo</p></div>
-                    <div><img data-lazy="_img/screenshots/zorin/09.png" /><p>Theme: Cyborg</p></div>
-                    <div><img data-lazy="_img/screenshots/zorin/10.png" /><p>Theme: Darkly</p></div>
-                    <div><img data-lazy="_img/screenshots/zorin/11.png" /><p>Theme: Flatly</p></div>
-                    <div><img data-lazy="_img/screenshots/zorin/12.png" /><p>Theme: Journal</p></div>
-                    <div><img data-lazy="_img/screenshots/zorin/13.png" /><p>Theme: Lumen</p></div>
-                    <div><img data-lazy="_img/screenshots/zorin/14.png" /><p>Theme: Paper</p></div>
-                    <div><img data-lazy="_img/screenshots/zorin/15.png" /><p>Theme: Readable</p></div>
-                    <div><img data-lazy="_img/screenshots/zorin/16.png" /><p>Theme: Sandstone</p></div>
-                    <div><img data-lazy="_img/screenshots/zorin/17.png" /><p>Theme: Slate</p></div>
-                    <div><img data-lazy="_img/screenshots/zorin/18.png" /><p>Theme: Spacelab</p></div>
-                    <div><img data-lazy="_img/screenshots/zorin/19.png" /><p>Theme: Superhero</p></div>
-                    <div><img data-lazy="_img/screenshots/zorin/20.png" /><p>Theme: United</p></div>
-                    <div><img data-lazy="_img/screenshots/zorin/21.png" /><p>Theme: Yeti</p></div>
-                    <div><img data-lazy="_img/screenshots/zorin/22.png" /><p>Status of All Projects</p></div>
-                    <div><img data-lazy="_img/screenshots/zorin/23.png" /><p>Dev Tools are always accessible</p></div>
-                -->
+                <div><img src="_img/screenshots/win/02.png" /><p>Editing a Project</p></div>
             </div>
         </section>
 
@@ -209,50 +185,35 @@
         <section id="cultures" class="bgwhite">
             <div class="half">
                 <h1>Multi-Language Support</h1>
-                <p>Scout-App 2 was designed with a powerful translation engine allowing for easily swapping out language files. It supports <strong class="supported">English, Dutch, French, and Russian</strong>. <a href="#cultures" class="showtranslations">Help translate Scout-App</a>.</p>
-                <div id="translation_instructions">
+
+                <h3 class="textpuppyspot">English, Dutch, French, and Russian</h3>
+
+                <p>Scout-App 2 was designed with a powerful translation engine allowing for easily swapping out language files.</p>
+
+                <p><a href="#cultures" class="showtranslations">Would you like to <strong>help translate</strong> Scout-App?</a></p>
+
+                <div id="translation_instructions" class="bgpuppybase">
                     <h4>Translating Scout-App 2 Instructions</h4>
                     <ol>
-                        <li>Log into your <a href="https://accounts.google.com/login" target="_blank">Google Account</a>.</li>
+                        <li>Login to your <a href="https://accounts.google.com/login" target="_blank">Google Account</a>.</li>
                         <li>Go to the translation file on <a href="https://docs.google.com/spreadsheets/d/16FtHGThz0-CBz_rf_9QO4zOV7oNmNk2BlwmtvKuzAhs/edit?usp=sharing">Google Sheets</a>.</li>
                         <li>There is an <strong>en</strong> column for the English version, and a <strong>CONTEXT</strong> column that explains the usage of the text.</li>
                         <li>Create a new column for your language. (Hide columns from languages you don't care about.)</li>
-                        <li>Translate all of the `en` phrases. Add another column for any notes related to your translations.</li>
-                        <li><a href="https://github.com/mhs/scout-app/issues/new?title=SA2%20-%20Translated%20Scout-App&body=New%20translation%20can%20be%20found%20at%0D%0D%2A%20https%3A%2F%2Fdocs%2Egoogle%2Ecom%2Fspreadsheets%2Fd%2F16FtHGThz0-CBz_rf_9QO4zOV7oNmNk2BlwmtvKuzAhs%2Fedit%3Fusp%3Dsharing">Add an issue to GitHub</a>, informing us of an update to the document.</li>
+                        <li>Translate all of the <strong>en</strong> phrases. Add another column for any notes related to your translations.</li>
+                        <li><a href="https://github.com/mhs/scout-app/issues/new?title=SA2%20-%20Translated%20Scout-App&body=New%20translation%20can%20be%20found%20at%0D%0D%2A%20https%3A%2F%2Fdocs%2Egoogle%2Ecom%2Fspreadsheets%2Fd%2F16FtHGThz0-CBz_rf_9QO4zOV7oNmNk2BlwmtvKuzAhs%2Fedit%3Fusp%3Dsharing">Add an issue to GitHub</a> to inform us of an update to the document.</li>
                     </ol>
                 </div>
-                <p>Scout-App runs on many different operation systems. Click a logo above to see screenshots from some of the supported OS's.</p>
-                <img src="_img/logo-win.svg"    alt="Windows" title="Windows" data-os="win"    class="win"    />
-                <img src="_img/logo-ubuntu.svg" alt="Ubuntu"  title="Ubuntu"  data-os="ubuntu" class="ubuntu" />
-                <img src="_img/logo-zorin.svg"  alt="Zorin"   title="Zorin"   data-os="zorin"  class="zorin"  />
-                <img src="_img/logo-osx.svg"    alt="OSX"     title="OSX"     data-os="osx"    class="osx"    />
+
+                <div class="osselect">
+                    <img src="_img/logo-win.svg"    alt="Windows" title="Windows" data-os="win"    class="win"    />
+                    <img src="_img/logo-ubuntu.svg" alt="Ubuntu"  title="Ubuntu"  data-os="ubuntu" class="ubuntu" />
+                    <img src="_img/logo-zorin.svg"  alt="Zorin"   title="Zorin"   data-os="zorin"  class="zorin"  />
+                    <img src="_img/logo-osx.svg"    alt="OSX"     title="OSX"     data-os="osx"    class="osx"    />
+                    <small>Click a logo above to see screenshots from that OS.</small>
+                </div>
             </div>
             <div class="half slick">
-                <!--
-                    <div><img data-lazy="_img/screenshots/zorin/01.png" /><p>First Time User Experience</p></div>
-                    <div><img data-lazy="_img/screenshots/zorin/02.png" /><p>English</p></div>
-                    <div><img data-lazy="_img/screenshots/zorin/03.png" /><p>Dutch</p></div>
-                    <div><img data-lazy="_img/screenshots/zorin/04.png" /><p>French</p></div>
-                    <div><img data-lazy="_img/screenshots/zorin/05.png" /><p>Russian</p></div>
-                    <div><img data-lazy="_img/screenshots/zorin/06.png" /><p>Theme: Cerulean</p></div>
-                    <div><img data-lazy="_img/screenshots/zorin/07.png" /><p>Theme: Classic</p></div>
-                    <div><img data-lazy="_img/screenshots/zorin/08.png" /><p>Theme: Cosmo</p></div>
-                    <div><img data-lazy="_img/screenshots/zorin/09.png" /><p>Theme: Cyborg</p></div>
-                    <div><img data-lazy="_img/screenshots/zorin/10.png" /><p>Theme: Darkly</p></div>
-                    <div><img data-lazy="_img/screenshots/zorin/11.png" /><p>Theme: Flatly</p></div>
-                    <div><img data-lazy="_img/screenshots/zorin/12.png" /><p>Theme: Journal</p></div>
-                    <div><img data-lazy="_img/screenshots/zorin/13.png" /><p>Theme: Lumen</p></div>
-                    <div><img data-lazy="_img/screenshots/zorin/14.png" /><p>Theme: Paper</p></div>
-                    <div><img data-lazy="_img/screenshots/zorin/15.png" /><p>Theme: Readable</p></div>
-                    <div><img data-lazy="_img/screenshots/zorin/16.png" /><p>Theme: Sandstone</p></div>
-                    <div><img data-lazy="_img/screenshots/zorin/17.png" /><p>Theme: Slate</p></div>
-                    <div><img data-lazy="_img/screenshots/zorin/18.png" /><p>Theme: Spacelab</p></div>
-                    <div><img data-lazy="_img/screenshots/zorin/19.png" /><p>Theme: Superhero</p></div>
-                    <div><img data-lazy="_img/screenshots/zorin/20.png" /><p>Theme: United</p></div>
-                    <div><img data-lazy="_img/screenshots/zorin/21.png" /><p>Theme: Yeti</p></div>
-                    <div><img data-lazy="_img/screenshots/zorin/22.png" /><p>Status of All Projects</p></div>
-                    <div><img data-lazy="_img/screenshots/zorin/23.png" /><p>Dev Tools are always accessible</p></div>
-                -->
+                <div><img src="_img/screenshots/win/05.png" /><p>Russian</p></div>
             </div>
         </section>
 
@@ -265,7 +226,7 @@
                 <h4>Scout-App 2 Development</h4>
                 <ul>
                     <li><a href="http://github.com/TheJaredWilcurt">The Jared Wilcurt</a> - Creator, Maintainer, Project Manager</li>
-                    <li><a href="http://github.com/StephanRaab">Stephan Raab</a> - Themes feature - Bug Finder</li>
+                    <li><a href="http://github.com/StephanRaab">Stephan Raab</a> - Themes feature, Bug Testing</li>
                     <li><a href="https://github.com/BlackBetty">Daniel Golant</a> - UX Testing and Design</li>
                     <li><a href="https://github.com/kimmortal1">Kim Sharpe</a> - New Logo Design</li>
                     <li><a href="http://github.com/zdennis">zdennis</a> - UX Design and Planning</li>
@@ -294,6 +255,25 @@
                     <li><a href="http://github.com/mhs">Mutually Human</a> - The company behind the original</li>
                     <li><a href="http://github.com/zdennis">zdennis</a> - Lead Developer</li>
                 </ul>
+            </div>
+        </section>
+
+        <section id="themes" class="bgwhite">
+            <div class="half">
+                <h1>Themes</h1>
+
+                <p>Scout-App 2 was designed with a powerful translation engine allowing for easily swapping out language files.</p>
+
+                <div class="osselect">
+                    <img src="_img/logo-win.svg"    alt="Windows" title="Windows" data-os="win"    class="win"    />
+                    <img src="_img/logo-ubuntu.svg" alt="Ubuntu"  title="Ubuntu"  data-os="ubuntu" class="ubuntu" />
+                    <img src="_img/logo-zorin.svg"  alt="Zorin"   title="Zorin"   data-os="zorin"  class="zorin"  />
+                    <img src="_img/logo-osx.svg"    alt="OSX"     title="OSX"     data-os="osx"    class="osx"    />
+                    <small>Click a logo above to see screenshots from that OS.</small>
+                </div>
+            </div>
+            <div class="half slick">
+                <div><img src="_img/screenshots/win/11.png" /><p>Flatly (Windows)</p></div>
             </div>
         </section>
 
