--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
             <div class="half">
                 <h1>Themes</h1>
 
-                <p>Scout-App 2 was designed with a powerful translation engine allowing for easily swapping out language files.</p>
+                <p>Most of these themes are supplied from BootSwatch. However you can <a href="https://www.youtube.com/watch?v=DtEVIDvBrSI" target="_blank">create your own custom theme</a> too.</p>
 
                 <div class="osselect">
                     <img src="_img/logo-win.svg"    alt="Windows" title="Windows" data-os="win"    class="win"    />
