Mixins section done

--- a/index.html
+++ b/index.html
@@ -311,6 +311,153 @@
             </div>
             <div id="mixins" class="half bgpuppybase">
                 <h4>Built-in Mixins</h4>
+                <p>Simply add the <code>@import</code> into your code to have access to that library.</p>
+
+                <div class="table">
+                    <div class="thead">
+                        <div class="tr">
+                            <div class="th half">Code</div>
+                            <div class="th half">Source</div>
+                        </div>
+                    </div>
+                    <div class="tbody limited hide">
+                        <div class="tr">
+                            <div class="td half"><code>@import "compass";</code></div>
+                            <div class="td half"><a href="https://github.com/Igosuki/compass-mixins">@Igosuki/compass-mixins</a></div>
+                        </div>
+                        <div class="tr">
+                            <div class="td half"><code>@import "bourbon";</code></div>
+                            <div class="td half"><a href="https://github.com/thoughtbot/bourbon">@thoughtbot/bourbon</a></div>
+                        </div>
+                        <div class="tr">
+                            <div class="td half"><code>@import "neat";</code></div>
+                            <div class="td half"><a href="https://github.com/thoughtbot/neat">@thoughtbot/neat</a></div>
+                        </div>
+                        <div class="tr">
+                            <div class="td half"><code>@import "meyer";</code></div>
+                            <div class="td half"><a href="https://github.com/TheJaredWilcurt/meyer-sass">@TheJaredWilcurt/meyer-sass</a></div>
+                        </div>
+                        <div class="tr">
+                            <div class="td half"><code>@import "buttons";</code></div>
+                            <div class="td half"><a href="https://github.com/alexwolfe/Buttons">@alexwolfe/Buttons</a></div>
+                        </div>
+                        <div class="tr">
+                            <div class="td showmore full">Show more</div>
+                        </div>
+                    </div>
+                    <div class="tbody complete">
+                        <div class="tr">
+                            <div class="td half"><code>@import "buttons";</code></div>
+                            <div class="td half"><a href="https://github.com/alexwolfe/Buttons">@alexwolfe/Buttons</a></div>
+                        </div>
+                        <div class="tr">
+                            <div class="td half"><code>@import "bi-app-ltr";</code></div>
+                            <div class="td half"><a href="https://github.com/anasnakawa/bi-app-sass">@anasnakawa/bi-app-sass</a></div>
+                        </div>
+                        <div class="tr">
+                            <div class="td half"><code>@import "bi-app-rtl";</code></div>
+                            <div class="td half"><a href="https://github.com/anasnakawa/bi-app-sass">@anasnakawa/bi-app-sass</a></div>
+                        </div>
+                        <div class="tr">
+                            <div class="td half"><code>@import "pineapple-sass";</code></div>
+                            <div class="td half"><a href="https://github.com/ArunMichaelDsouza/pineapple-sass">@ArunMichaelDsouza/pineapple-sass</a></div>
+                        </div>
+                        <div class="tr">
+                            <div class="td half"><code>@import "saffron";</code></div>
+                            <div class="td half"><a href="https://github.com/corporadobob/saffron">@corporadobob/saffron</a></div>
+                        </div>
+                        <div class="tr">
+                            <div class="td half"><code>@import "scut";</code></div>
+                            <div class="td half"><a href="https://github.com/davidtheclark/scut">@davidtheclark/scut</a></div>
+                        </div>
+                        <div class="tr">
+                            <div class="td half"><code>@import "su";</code></div>
+                            <div class="td half"><a href="https://github.com/ericam/susy">@ericam/susy</a></div>
+                        </div>
+                        <div class="tr">
+                            <div class="td half"><code>@import "susy";</code></div>
+                            <div class="td half"><a href="https://github.com/ericam/susy">@ericam/susy</a></div>
+                        </div>
+                        <div class="tr">
+                            <div class="td half"><code>@import "susyone";</code></div>
+                            <div class="td half"><a href="https://github.com/ericam/susy">@ericam/susy</a></div>
+                        </div>
+                        <div class="tr">
+                            <div class="td half"><code>@import "andy";</code></div>
+                            <div class="td half"><a href="https://github.com/gillesbertaux/andy">@gillesbertaux/andy</a></div>
+                        </div>
+                        <div class="tr">
+                            <div class="td half"><code>@import "typesettings";</code></div>
+                            <div class="td half"><a href="https://github.com/ianrose/typesettings">@ianrose/typesettings</a></div>
+                        </div>
+                        <div class="tr">
+                            <div class="td half"><code>@import "compass";</code></div>
+                            <div class="td half"><a href="https://github.com/Igosuki/compass-mixins">@Igosuki/compass-mixins</a></div>
+                        </div>
+                        <div class="tr">
+                            <div class="td half"><code>@import "lemonade";</code></div>
+                            <div class="td half"><a href="https://github.com/Igosuki/compass-mixins">@Igosuki/compass-mixins</a></div>
+                        </div>
+                        <div class="tr">
+                            <div class="td half"><code>@import "sassy-buttons";</code></div>
+                            <div class="td half"><a href="https://github.com/jhardy/Sassy-Buttons">@jhardy/Sassy-Buttons</a></div>
+                        </div>
+                        <div class="tr">
+                            <div class="td half"><code>@import "bluejay";</code></div>
+                            <div class="td half"><a href="https://github.com/kalebheitzman/bluebird">@kalebheitzman/bluebird</a></div>
+                        </div>
+                        <div class="tr">
+                            <div class="td half"><code>@import "sass-easing";</code></div>
+                            <div class="td half"><a href="https://github.com/kingscooty/sass-easing">@kingscooty/sass-easing</a></div>
+                        </div>
+                        <div class="tr">
+                            <div class="td half"><code>@import "family";</code></div>
+                            <div class="td half"><a href="https://github.com/LukyVj/family.scss">@LukyVj/family.scss</a></div>
+                        </div>
+                        <div class="tr">
+                            <div class="td half"><code>@import "breakpoint";</code></div>
+                            <div class="td half"><a href="https://github.com/lesjames/breakpoint">@lesjames/breakpoint</a></div>
+                        </div>
+                        <div class="tr">
+                            <div class="td half"><code>@import "sass-css3-mixins";</code></div>
+                            <div class="td half"><a href="https://github.com/matthieua/sass-css3-mixins">@matthieua/sass-css3-mixins</a></div>
+                        </div>
+                        <div class="tr">
+                            <div class="td half"><code>@import "cssowl";</code></div>
+                            <div class="td half"><a href="https://github.com/owl-stars/cssowl">@owl-stars/cssowl</a></div>
+                        </div>
+                        <div class="tr">
+                            <div class="td half"><code>@import "sierra";</code></div>
+                            <div class="td half"><a href="https://github.com/sierra-library/sierra">@sierra-library/sierra</a></div>
+                        </div>
+                        <div class="tr">
+                            <div class="td half"><code>@import "spice";</code></div>
+                            <div class="td half"><a href="https://github.com/spice-sass/spice">@spice-sass/spice</a></div>
+                        </div>
+                        <div class="tr">
+                            <div class="td half"><code>@import "meyer";</code></div>
+                            <div class="td half"><a href="https://github.com/TheJaredWilcurt/meyer-sass">@TheJaredWilcurt/meyer-sass</a></div>
+                        </div>
+                        <div class="tr">
+                            <div class="td half"><code>@import "bourbon-deprecated-upcoming";</code></div>
+                            <div class="td half"><a href="https://github.com/thoughtbot/bourbon">@thoughtbot/bourbon</a></div>
+                        </div>
+                        <div class="tr">
+                            <div class="td half"><code>@import "bourbon";</code></div>
+                            <div class="td half"><a href="https://github.com/thoughtbot/bourbon">@thoughtbot/bourbon</a></div>
+                        </div>
+                        <div class="tr">
+                            <div class="td half"><code>@import "neat";</code></div>
+                            <div class="td half"><a href="https://github.com/thoughtbot/neat">@thoughtbot/neat</a></div>
+                        </div>
+                        <div class="tr">
+                            <div class="td showless full">Show less</div>
+                        </div>
+                    </div>
+                </div>
+
+                <p>If we've missed a popular mixin library, request it on the <a href="https://github.com/mhs/scout-app/issues" target="_blank">issues page</a>.</p>
+
             </div>
         </section>
 
